Verification and Validation for signup

--- a/Backend/accounts/templates/accounts/new_login_page.html
+++ b/Backend/accounts/templates/accounts/new_login_page.html
@@ -26,7 +26,7 @@
             <input type="email" id="email-ad" name="email" placeholder="Enter Email Address" required>
             <label for="password">Password</label>
             <input type="password" id="password" name="password" placeholder="Enter Password" required>
-            <a href="" class="forget">Forget Password?</a>
+            <a href="{% url 'forgot-password'%}" class="forget">Forget Password?</a>
             <button type="submit" id="login-btn">Login</button>
         </form>
     </div>
