--- a/Backend/accounts/templates/accounts/new_customer_signup.html
+++ b/Backend/accounts/templates/accounts/new_customer_signup.html
@@ -18,10 +18,15 @@
             </div>
             <label for="email-ad">Email Address</label>
             <input type="text"  class="input-length" id="email-ad" name="email" placeholder="Email Address" required>
-            <label for="password">Create Password</label>
-            <input type="password"  class="input-length" id="password" name="password" placeholder="Create Password" required>
+            <div class = "mb-3">
+                <label for="password">Create Password</label>
+                <input type="password"  class="input-length" id="password" name="password" placeholder="Create Password" required>
+                <p class = "text">*Please Ensure your password has atleast 8+ characters with atleast one A-Z, a-z, 0-9, and a symbol</p>
+            </div>
+            <label for="password2">Confirm Password</label>
+            <input type="password"  class="input-length" id="password2" name="password2" placeholder="Confirm Password" required>
             
-            <button type="submit" id="signup-btn">Sign Up</button>
+            <button id="signup-btn">Sign Up</button>
             <h5>Already have an account? <a href= "{% url 'login-page'%}"><span class="already-login">Login</span></a></h5>
         </form>
         
