--- a/Backend/accounts/templates/accounts/new_kitchen_signup.html
+++ b/Backend/accounts/templates/accounts/new_kitchen_signup.html
@@ -9,7 +9,7 @@
         <h1>Signup <span  style="
             font-size:15px;
             font-weight: 400;">as a Kitchen</span></h1>
-        <form method = "POST">
+        <form method = "POST" enctype="multipart/form-data">
             {% csrf_token %}
             <label for="kitchen-name">Kitchen Name</label>
             <input type="text" class="input-length" id="kitchen-name" name="kitchen_name" placeholder="Kitchen Name" required>
@@ -20,9 +20,21 @@
             </div>
             <label for="email-ad">Email Address</label>
             <input type="text" class="input-length" id="email-ad" name="email" placeholder="Email Address" required>
-            <label for="password">Create Password</label>
-            <input type="password" class="input-length" id="password" name="password" placeholder="Confirm Password" required>
-            <button type="submit" id="signup-btn">Sign Up</button>
+            <label for="email-ad">Phone Number</label>
+            <input type="text" class="input-length" id="email-ad" name="phone_number" placeholder="Phone Number" required>
+            <div class = "mb-3">
+                <label for="email-ad">Upload Menu</label>
+                <input type="file" class="input-length" id="email-ad" name="menuFile" placeholder="menu" required>
+                <p class = "text">*Kindly verify the provided menu as it will be submitted for approval.</p>
+            </div>
+            <div class = "mb-3">
+                <label for="password">Create Password</label>
+                <input type="password"  class="input-length" id="password" name="password" placeholder="Create Password" required>
+                <p class = "text">*Please Ensure your password has atleast 8+ characters with atleast one A-Z, a-z, 0-9, and a symbol</p>
+            </div>
+            <label for="password2">Confirm Password</label>
+            <input type="password" class="input-length" id="password2" name="password2" placeholder="Confirm Password" required>
+            <button id="signup-btn">Sign Up</button>
             <h5>Already have an account? <a href="{% url 'login-page'%}"><span class="already-login">Login</span></a></h5>
         </form>
     </div>
