--- a/Backend/menuitem/templates/menuitem/checkout.html
+++ b/Backend/menuitem/templates/menuitem/checkout.html
@@ -36,6 +36,21 @@
                 <div class="payment-label">Payment Options</div>
                     <div class="payment__option-button">
                         <div class = "payment__option-button__choice">
+                            {% comment %} <form method ="POST" action = "{% url 'initiate' %}">
+                                {% csrf_token %} 
+                                    <input type="hidden" name="purchase_order_id" value="{{uuid}}"  id="pid">
+                                    <input type="hidden" name="amount" value="{{item|get_cart_total:request.session.cart}}" id="amt">
+                                    <button value = "Khalti">Pay with Khalti</button>
+                                    <input type = "hidden" name = "payment_method" value = "Khalti"/>
+                                    <input type="hidden" name="return_url" value="http://127.0.0.1:8000/verify">
+                            </form>
+                            <form method ="POST">
+                                {% csrf_token %} 
+                                   
+                                    <button value = "Khalti">Cash on Delivery</button>
+                                    <input type = "hidden" name = "payment_method" value = "Cash on Delivery"/>
+                                   
+                            </form> {% endcomment %}
                             <input type = "radio" name = "payment_method" value="Khalti"/><img src = "{% static 'images/checkout/Khalti.png'%}"/>
                             <input type = "radio" name = "payment_method" value = "Cash on Delivery"/><img src = "{% static 'images/checkout/CashonDelivery.png'%}"/>
                         </div>
