--- a/Backend/accounts/templates/accounts/new_customer_signup.html
+++ b/Backend/accounts/templates/accounts/new_customer_signup.html
@@ -18,6 +18,8 @@
             </div>
             <label for="email-ad">Email Address</label>
             <input type="text"  class="input-length" id="email-ad" name="email" placeholder="Email Address" required>
+            <label for="email-ad">Phone Number</label>
+            <input type="text" class="input-length" id="email-ad" name="phone_number" placeholder="Phone Number" required>
             <div class = "mb-3">
                 <label for="password">Create Password</label>
                 <input type="password"  class="input-length" id="password" name="password" placeholder="Create Password" required>
