--- a/Backend/home/templates/home/kitchen-dashboard-setting.html
+++ b/Backend/home/templates/home/kitchen-dashboard-setting.html
@@ -55,7 +55,10 @@
           </tr>
 
           {% endif %}
-          
+          <tr>
+            <td></td>
+            <td>*If you want to relocate your location. Please contact to ghar.chulo2023@gmail.com</td>
+          </tr>
           <tr>
             <td class="name"></td>
             <td class="value"><button id="save">Save</button></td>
