--- a/Backend/static/css/checkout.css
+++ b/Backend/static/css/checkout.css
@@ -111,6 +111,12 @@
   margin: 5px 0 0 0;
 }
 
+
+.payment-label {
+  font-weight: 700;
+  width: 150px;
+  margin: 10px 0;
+}
 .payment__option-button .payment__option-button__choice input {
   width: 40px;
   border-radius: 15px;
@@ -123,12 +129,29 @@
   border: 2px solid black;
 }
 
-.payment-label {
-  font-weight: 700;
-  width: 150px;
-  margin: 10px 0;
+.payment__option-button__choice{
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
+.payment__option-button__choice form{
+  width: 50%;
+}
+
+form input[type="submit"]{
+  width: 10rem;
+  margin: 0.5rem 0.5rem;
+}
+
+form input[type="submit"].btn-khalti{
+  background-color:#5E338D;
+  color: #f5f5f5;
+}
+form input[type="submit"].btn-cod{
+  background-color:#dc2234;
+  color: #f5f5f5;
+}
 .payment__option-button__choice {
   display: flex;
   justify-content: center;
