--- a/Backend/static/css/kitchen-dashboard/allstyle.css
+++ b/Backend/static/css/kitchen-dashboard/allstyle.css
@@ -8,7 +8,7 @@
 
 body{
     display: flex;
-    background-color: rgb(247, 47, 47);
+    
     height: 100vh;
 }
 aside
@@ -17,6 +17,8 @@ aside
     border-radius: 0px 10px 10px 0px;
     background-color: white;
     box-shadow: -3px 0px 15px 0px #262626;
+    background-color: rgb(247, 47, 47);
+    color: white;
     z-index: 1;
     display: flex;
     flex-direction: column;
