Kitchen Dashboard Refinement

--- a/Backend/home/templates/home/kitchen-dashboard-setting.html
+++ b/Backend/home/templates/home/kitchen-dashboard-setting.html
@@ -57,7 +57,7 @@
           {% endif %}
           <tr>
             <td></td>
-            <td>*If you want to relocate your location. Please contact to ghar.chulo2023@gmail.com</td>
+            <td class = "hint">*If you want to relocate your location. Please contact to ghar.chulo2023@gmail.com</td>
           </tr>
           <tr>
             <td class="name"></td>
