--- a/Backend/home/templates/home/kitchen-dashboard-product.html
+++ b/Backend/home/templates/home/kitchen-dashboard-product.html
@@ -1,42 +1,54 @@
 {% extends 'kitchen-dashboard/kitchen-dashboard-main.html' %} 
 {% block content%} 
 {% load cart %}
+<div class = "product__container">
+    <div class = "product__container-user">
+        <div class = "product__container-user__info">
+            <div class = "product__container-user__info-image">
+                <img src="{{user.image.url}}" id="profile-img" alt="">
+            </div>
+            <div class = "product__container-user__info-detail">
+                <h3>{{user.kitchen_name}}</h3>
+                <p>{{user.phone_number}}</p>
+            </div>
+        </div>
+    </div>
 
-<div class="myproducts">
-  <header>
-      <h2>My Products</h2>
-      <a href = "{% url 'add-product'%}" id="addproduct">Add Product</a>
-  </header>
-  <div class="tablefixhead">
-    <table>
-      <thead>
-        <tr>
-          <th>Product Image</th>
-          <th>Name</th>
-          <th>Price</th>
-          <th>Description</th>
-          <th>Edit/Delete</th>
-        </tr>
-      </thead>
+    <div class = "product__container-item">
+        <div class = "product_container-item__heading">
+            <div class = "menu__title">
+                <h2>Menu</h2>
+            </div>
+            <div class = "menu__addItem">
+                <a href = "{% url 'add-product'%}">Add Item</a>
+            </div>
+        </div>
 
-      <tbody>
-        {% for item in queryset %}
-        <tr class="item item-one">
-          <td>
-            <div class="imgcover"><img src = "{{item.item_image.url}}"/></div>
-          </td>
-          <td>{{item.item_name}}</td>
-          <td>Rs. {{item.item_price}}</td>
-          <td>{{item.item_description|truncatechars:50}}</td>
-          <td><a href="{% url 'edit-product' item.id%}" class="success">Edit</a><a href="{% url 'delete-product' item.id%}" class="danger">Delete</a></td>
-        </tr>
-
-        {% endfor %}
-
-
-      </tbody>
-    </table>
-
-  </div>
+        <div class = "product__container-item__container">
+            <div class = "product__container-item__container-table">
+                <div class = "product__container-item__contianer-table__title">
+                        <h3 class = "item-image">Item Image</h3>
+                        <h3>Name</h3>
+                        <h3>Price</h3>
+                        <h3>Description</h3>
+                        <h3>Edit/Delete</h3>
+                    </td>
+                </div>
+                <div class = "product__container-item__contianer-table__body">
+                    {% for item in queryset %}
+                    <div class = "item-container">
+                        <div class="imgcover"><img src = "{{item.item_image.url}}"/></div>
+                        <p>{{item.item_name}}</p>
+                        <p>Rs. {{item.item_price}}</p>
+                        <p>{{item.item_description|truncatechars:50}}</p>
+                        <div class = "item-table-button">
+                             <a href="{% url 'edit-product' item.id%}" class="success-btn">Edit</a><a href="{% url 'delete-product' item.id%}" class="danger-btn">Delete</a>
+                        </div>
+                    </div>
+                    {% endfor %}
+                </div>
+            </div> 
+        </div>
+    </div>
 </div>
 {% endblock %}
