--- a/Backend/home/templates/home/kitchen-dashboard-profile.html
+++ b/Backend/home/templates/home/kitchen-dashboard-profile.html
@@ -1,51 +1,33 @@
 {% extends 'kitchen-dashboard/kitchen-dashboard-main.html' %}
 {% block content %}
 <div class="container">
-    <div class="container-one">
-        <div class="summary">
-            <figure>
-                <img src="{{user.image.url}}" id="profile-img" alt="">
-                <h2>{{user.kitchen_name}}</h2>
-            </figure>
-            <div class="revenue">
-                <span>$Revenue</span>
-                <span>{{user.revenue}}</span>
-            </div>
-            <hr>
-            <div class="visitor">
-                <span>Visitors</span>
-                <span>50</span>                 
-            </div>
-            </div>
-            <div class="accounthealth">
-                <h2>Account Health</h2>
-                <hr>
-                <div class="alert">
-                    <p> ✅ Awesome! Your are a role model. Thank you for adhering to our policies.</p>
-                </div>
-                <div class="report-status">
-                    <p>No. of Reports</p>
-                    <h2>0</h2>
-                </div>
-            </div>                
+    <div class = "container__kitchen">
+        <div class = "container__kitchen-welcome">
+            <h1 class = "welcome-title">Welcome</h1>
         </div>
-        <div class="container-two">
-            <h2>📢 Announcements</h2>
-            <div class="announcement announcement-one">
-                <h4>Dashain Holiday Updates: Stay Informent</h4>
-                <p>Stay infromed with the latest Dashin Holiday Updates.</p>
+        <div class = "container__kitchen-info">
+            <div class = "container__kitchen-info__image"> 
+                <img src="{{user.image.url}}" id="profile-img" alt="">
             </div>
-            <hr>
-            <div class=" announcement announcement-two">
-                <h4>REMINDER: Fill Dashain Holidays Survey!</h4>
-                <p>Please fill this Survey form and let us know your availability after the Dashain holidays which will greatly assist us in processing the orders afterh</p>
-            </div>
-            <hr>
-            <div class="announcement announcement-three">
-                <h4>Dashain Holiday Updates: Stay Informent</h4>
-                <p>Stay infromed with the latest Dashin Holiday Updates.</p>
-            </div>
-
+            <h2 class = "user-title">{{user.kitchen_name}}</h2>
         </div>
     </div>
+    <div class = "container__orderInfo">
+        <h2 class = "order-status">Order <span class = "status">Status</span></h2>
+        <div class = "container__orderInfo-status">
+            <div class = "box container__oderInfo-total">
+                <h3 class = "box-title">Total Order:</h3>
+                <p class = "box-body">{{total}}</p>
+            </div>
+            <div class = "box container__oderInfo-pending">
+                <h3 class = "box-title">Order Pending:</h3>
+                <p class = "box-body">{{pending}}</p>
+            </div>
+            <div class = "box container__oderInfo-completed">
+                <h3 class = "box-title">Order Completed:</h3>
+                <p class = "box-body">{{completed}}</p>
+            </div>
+        </div>
+    </div>
+</div>
 {% endblock content %}
