--- a/Backend/menuitem/templates/menuitem/product.html
+++ b/Backend/menuitem/templates/menuitem/product.html
@@ -3,26 +3,26 @@
 {% block content %}
 <div class="product-form-container">
     <form method = "POST" enctype = "multipart/form-data"  class="form">
-        <h1>Add Product</h1>
+        <h1>Add Item</h1>
         {% csrf_token %}
         <div class="mb-3">
-            <label for="exampleInputEmail1" class="form-label">Product Name</label>
+            <label for="exampleInputEmail1" class="form-label">Item Name</label>
             <input type="text" name = "item_name" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
         </div>
         <div class="mb-3">
-            <label for="exampleInputEmail1" class="form-label">Product Description</label>
+            <label for="exampleInputEmail1" class="form-label">Item- Description</label>
             <input type="text" name = "item_description" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
         </div>
         <div class="mb-3">
-        <label for="exampleInputEmail1" class="form-label">Product Price</label>
+        <label for="exampleInputEmail1" class="form-label">Item Price</label>
         <input type="text" name = "item_price" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
         </div>
         <div class="mb-3">
-            <label for="exampleFormControlTextarea1" class="form-label">Product Ingredients</label>
+            <label for="exampleFormControlTextarea1" class="form-label">Item Ingredients</label>
             <textarea class="form-control" name = "item_ingredients" id="exampleFormControlTextarea1" rows="3"></textarea>
         </div>
         <div class="input-group mb-3">
-            <label class="input-group-text" for="inputGroupFile01">Product Image</label>
+            <label class="input-group-text" for="inputGroupFile01">Item Image</label>
             <input type="file" name = "item_image" class="form-control" id="inputGroupFile01">
         </div>
         
