--- a/Backend/static/css/kitchen-dashboard/allstyle.css
+++ b/Backend/static/css/kitchen-dashboard/allstyle.css
@@ -1,70 +1,54 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500&display=swap');
-*,html,body{
-    margin: 0px;
-    padding: 0px;
-    box-sizing: border-box;
-    font-family: 'Poppins';
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500&display=swap");
+*,
+html,
+body {
+  margin: 0px;
+  padding: 0px;
+  box-sizing: border-box;
+  font-family: "Poppins";
 }
 
-body{
-    display: flex;
-    
-    height: 100vh;
+body {
+  display: flex;
+  height: 100vh;
 }
-aside
-{
-    width: 300px;
-    border-radius: 0px 10px 10px 0px;
-    background-color: white;
-    box-shadow: -3px 0px 15px 0px #262626;
-    background-color: rgb(247, 47, 47);
-    color: white;
-    z-index: 1;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 30px;
+/*NavBar*/
+
+nav {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  padding: 0.8rem 1rem;
+  box-shadow: -3px 0px 15px 0px #262626;
 }
-aside .logo a{
-    display: flex;
-    flex-direction: row;
-    border: 2px solid black;
+
+.nav_menu {
+  display: flex;
+  justify-content: center;
+
+  height: 100%;
 }
-.catalogue{
-    width: 100%;
+
+ul {
+  margin: 1rem 0;
 }
-ul{
-    list-style: none;
-    padding-top: 30px;
-}
-ul a{
-    text-decoration: none;
-    color: black;
-}
+
 ul li {
-    margin: 10px 0px 0px 20px;
-    padding: 5px 20px;
-    text-align: start;
-    display: inline-block;
-    font-weight: 400;
+  list-style-type: none;
+  margin: 2rem 0;
 }
 
-*::-webkit-scrollbar {
-    width: 16px;
-  }
-  
-  *::-webkit-scrollbar-track {
-    background: rgb(207, 207, 207);
-    border-radius: 0px 5px 5px 0px;
-  }
-  
-  *::-webkit-scrollbar-thumb {
-    background-color: orangered;
-    border-radius: 20px;
-    border: 2px solid white;
-  }
+li a {
+  text-decoration: none;
+  color: #000;
+  width: 100%;
+  font-weight: 700;
+  padding: 1rem 1rem;
+  margin: 2rem 0;
+}
 
-  ::-webkit-scrollbar-thumb:hover {
-    background: rgb(247, 47, 47);
-
-  }
+li a:hover {
+  background-color: #dc2234;
+  color: #fff;
+  border-radius: 10px;
+}
