--- a/Backend/templates/kitchen-dashboard/kitchen-dashboard-navbar.html
+++ b/Backend/templates/kitchen-dashboard/kitchen-dashboard-navbar.html
@@ -1,16 +1,13 @@
 {% load static %}
-<aside>
+<nav>
     <a href="" class = "logo"><img src="{% static 'images/login-image/logo_kitchen.svg'%}" width="100%" alt="GharChulo Logo"></a>
-    <div class="catalogue">
+    <div class="nav_menu">
         <ul>
-            <a href="{% url 'kitchen-dashboard'%}"><li id="profile">Profile</li></a>
-            <br>
-            <a href="{% url 'kitchen-product'%}"><li id="product" >Product</li></a>
-            <br>
-            <a href="{% url 'kitchen-order'%}"><li id="orders">Orders</li></a>
-            <a href="{% url 'setting'%}"><li id="accsett">Account & Setting</li></a>
-            <a href="{% url 'logout' %}"><li id="logout">Logout</li></a>
+            <li id="profile"><a href="{% url 'kitchen-dashboard'%}">Kitchen Profile</a></li>
+            <li id="product" ><a href="{% url 'kitchen-product'%}">Menu Item</a></li>
+            <li id="orders"><a href="{% url 'kitchen-order'%}">Orders</a></li>
+            <li id="accsett"><a href="{% url 'setting'%}">Account & Setting</a></li>
+            <li id="logout"><a href="{% url 'logout' %}">Logout</a></li>
         </ul>
     </div>
-
-</aside>
+</nav>
