Phone Number Addition in Customer

--- a/Backend/templates/kitchen-dashboard/kitchen-dashboard-navbar.html
+++ b/Backend/templates/kitchen-dashboard/kitchen-dashboard-navbar.html
@@ -3,7 +3,7 @@
     <a href="" class = "logo"><img src="{% static 'images/login-image/logo_kitchen.svg'%}" width="100%" alt="GharChulo Logo"></a>
     <div class="nav_menu">
         <ul>
-            <li id="profile"><a href="{% url 'kitchen-dashboard'%}">Kitchen Profile</a></li>
+            <li id="profile"><a href="{% url 'kitchen-dashboard'%}">Dashboard</a></li>
             <li id="product" ><a href="{% url 'kitchen-product'%}">Menu Item</a></li>
             <li id="orders"><a href="{% url 'kitchen-order'%}">Orders</a></li>
             <li id="accsett"><a href="{% url 'setting'%}">Account & Setting</a></li>
