--- a/Backend/menuitem/templates/menuitem/checkout.html
+++ b/Backend/menuitem/templates/menuitem/checkout.html
@@ -26,6 +26,19 @@
                     </div>
                 {% endfor %}
             </div>
+            <div class = "time_option">
+                <label for="deliveryDate">Select Delivery Date:</label>
+                <select id="deliveryDate" name="deliveryDate">
+                
+                </select>
+
+                <label for="deliveryTime">Select Delivery Time:</label>
+                <select id="deliveryTime" name="deliveryTime">
+                    <!-- Dynamically populate time slots from 9 am to 9 pm with 1-hour intervals -->
+                    
+                </select>
+                <p class = "red">*You can select delivery date today or tommorow only.</p>
+            </div>
         
             <div class="total">
                 <div class="label"><span class="highlight">Total</span></div>
