--- a/Backend/menuitem/templates/menuitem/kitchenorder.html
+++ b/Backend/menuitem/templates/menuitem/kitchenorder.html
@@ -17,6 +17,7 @@
     <div class="product_container-item__heading">
       <div class="menu__title">
         <h2>Orders</h2>
+        <p class = "red">*Kitchen are requested to start proceeding order after 15 minutes of order made.</p>
       </div>
       <div class="menu__addItem"></div>
     </div>
