Customer Order Modification

--- a/Backend/menuitem/templates/menuitem/customer-order.html
+++ b/Backend/menuitem/templates/menuitem/customer-order.html
@@ -5,6 +5,7 @@
 <div class = "order-main-container ">
 <div class="order-container">
     <h1>My Order</h1>
+    <p class = "imp">*Dear Customer, You can cancel your order within 15 min of order you made. Thank you.</p>
     <table class="table">
       <thead>
           <th scope="col">Order date</th>
