--- a/Backend/menuitem/templates/menuitem/checkout.html
+++ b/Backend/menuitem/templates/menuitem/checkout.html
@@ -31,13 +31,14 @@
                 <select id="deliveryDate" name="deliveryDate">
                 
                 </select>
-
+                <p class = "red">*You can select delivery date today or tommorow only.</p>
+                
                 <label for="deliveryTime">Select Delivery Time:</label>
                 <select id="deliveryTime" name="deliveryTime">
                     <!-- Dynamically populate time slots from 9 am to 9 pm with 1-hour intervals -->
                     
                 </select>
-                <p class = "red">*You can select delivery date today or tommorow only.</p>
+                <p class = "red">*Choose a time that is one hour ahead of the current time.</p>
             </div>
         
             <div class="total">
