--- a/Backend/home/templates/home/new_home.html
+++ b/Backend/home/templates/home/new_home.html
@@ -32,7 +32,7 @@
             </div>
             {% endfor %}
         {% else %}
-            <h2> No Kitchen Avaiable Around You!!</h2>
+            <h2> No Kitchen Available Around You!!</h2>
         {% endif %}
     </div>
 </div>
